syntax = "proto3";

package steemwatch.steem;
option go_package = "steempb";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message ConvertOperation {
    string owner = 1;
    uint32 request_id = 2 [(gogoproto.customname) = "RequestID"];
    string amount = 3;
}
