syntax = "proto3";

package steemwatch.steem;
option go_package = "steempb";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message CustomJSONOperation {
    repeated string required_auths = 1;
    repeated string required_posting_auths = 2;
    string id = 3 [(gogoproto.customname) = "ID"];
    string json = 4 [(gogoproto.customname) = "JSON"];
}
